remove extra files

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -81,30 +81,16 @@
 					<ul>
 						<li>
 							<div class="inner">
-								<img class="svg" src={% static 'img/svg/figma.svg' %} alt="" />
-								<h3>Figma</h3>
-								<p>Crafting visually stunning and intuitive user experiences, Emphasizes both and artistic touch.</p>
+								<img class="svg" src={% static 'img/svg/python.svg' %} alt="" />
+								<h3>Python</h3>
+								<p>Seasoned Pythonista crafting elegant solutions, from data wrangling to web development.</p>
 							</div>
 						</li>
 						<li>
 							<div class="inner">
 								<img class="svg" src={% static 'img/svg/django.svg' %} alt="" />
 								<h3>Django</h3>
-								<p>I'm proficient in Django, crafting scalable web applications with clean, maintainable code.</p>
-							</div>
-						</li>
-						<li>
-							<div class="inner">
-								<img class="svg" src={% static 'img/svg/web.svg' %} alt="" />
-								<h3>Html, Css & JS </h3>
-								<p>Experienced in building visually appealing and functional web interfaces using HTML, CSS & JS.</p>
-							</div>
-						</li>
-						<li>
-							<div class="inner">
-								<img class="svg" src={% static 'img/svg/python.svg' %} alt="" />
-								<h3>Python</h3>
-								<p>Seasoned Pythonista crafting elegant solutions, from data wrangling to web development.</p>
+								<p>Building clean and maintainable web applications, harnessing the framework's power.</p>
 							</div>
 						</li>
 						<li>
@@ -116,9 +102,23 @@
 						</li>
 						<li>
 							<div class="inner">
-								<img class="svg" src={% static 'img/svg/illustrator.svg' %} alt="" />
-								<h3>Adobe illustrator</h3>
-								<p>Be a yardstick of quality. Some people aren’t used to an environment where excellence is expected.</p>
+								<img class="svg" src={% static 'img/svg/figma.svg' %} alt="" />
+								<h3>Figma</h3>
+								<p>Crafting visually stunning and intuitive user experiences, Emphasizes both and artistic touch.</p>
+							</div>
+						</li>
+						<li>
+							<div class="inner">
+								<img class="svg" src={% static 'img/svg/web.svg' %} alt="" />
+								<h3>HTML, CSS & JS </h3>
+								<p>Maestro sculpting pixel-perfect interfaces, combining structural precision with visual flair.</p>
+							</div>
+						</li>
+						<li>
+							<div class="inner">
+								<img class="svg" src={% static 'img/svg/teamwork.svg' %} alt="" />
+								<h3>Team Work</h3>
+								<p>Seamlessly integrating with diverse work styles, prioritizing shared goals over individual gain.</p>
 							</div>
 						</li>
 					</ul>
