--- a/main/templates/includes/border_bottom.html
+++ b/main/templates/includes/border_bottom.html
@@ -5,9 +5,15 @@
         </div>
         <div class="social">
             <ul>
-                <li><a href="https://github.com/HushmKun"><i class="fa-brands fa-github fa-sm"></i></a></li>
-                <li><a href="https://twitter.com/Hushm_Kun"><i class="fa-brands fa-twitter fa-sm"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/hushm/"><i class="fa-brands fa-linkedin fa-sm"></i></a></li>
+                <li>
+                    <a href="https://github.com/HushmKun"><i class="fa-brands fa-github fa-sm"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/Hushm_Kun"><i class="fa-brands fa-twitter fa-sm"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/hushm/"><i class="fa-brands fa-linkedin fa-sm"></i></a>
+                </li>
             </ul>
         </div>
     </div>
