--- a/main/templates/includes/border_top.html
+++ b/main/templates/includes/border_top.html
@@ -3,14 +3,18 @@
     <div class="header_wrap">
         <div class="logo anchor">
             <div class="logo_image">
-                <a href= {% url 'home'  %} ><img src={% static 'img/logo/logo.png' %} alt="" /></a>
+                <a href={% url 'home' %}>
+                    <img src={% static 'img/logo/logo.png' %} alt="" />
+                </a>
             </div>
         </div>
+        {% if request.path == '/' %}
         <div class="trigger">
             <a href="#">
                 <span class="one"></span>
                 <span class="two"></span>
             </a>
         </div>
+        {% endif %}
     </div>
 </div>
