--- a/main/templates/includes/latest_posts.html
+++ b/main/templates/includes/latest_posts.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <li>
     <div class="title_holder">
         <h3>Latest Posts</h3>
@@ -7,20 +6,24 @@
     <div class="posts_list">
         <ul>
             {% for post in latest %}
-            <li>
-                <div class="inner">
-                    <div class="post_image">
-                        <img src= {%  static 'img/news/300x200.jpg' %} alt="" />
-                        <div class="image" data-img-url= {{ post.img.url}}></div>
-                        <div class="overlay_post"></div>
+                <li>
+                    <div class="inner">
+                        <div class="post_image">
+                            <img src= {% static 'img/news/300x200.jpg' %} alt="" />
+                            <div class="image" data-img-url= {{ post.img.url }}>
+                            </div>
+                            <div class="overlay_post"></div>
+                        </div>
+                        <div class="title_date">
+                            <h3>
+                                <a href="#">{{ post.title|title }}</a>
+                            </h3>
+                            <span>{{ post.date }}</span>
+                        </div>
+                        <a class="lexal_tm_post_full_link"
+                           href="{% url 'news_detail' post.slug %}"></a>
                     </div>
-                    <div class="title_date">
-                        <h3><a href="#">{{post.title|title}}</a></h3>
-                        <span>{{ post.date }}</span>
-                    </div>
-                    <a class="lexal_tm_post_full_link" href={% url 'news_detail' post.slug %}></a>
-                </div>
-            </li>
+                </li>
             {% endfor %}
         </ul>
     </div>
